# cent-emulation

hw/: .gitignore  build_project.tcl
ip_repo/: .gitignore
ip_repo/my_cmd_engine/: cmd_engine_top.vhd  cmd_engine_top_tb.vhd  component.xml
ip_repo/my_cmd_engine/src/: cmd_engine_top_tb_behav.wcfg
ip_repo/my_cmd_engine/xgui/: cmd_engine_top_v1_0.tcl
ip_repo/my_host_iface_and_ctrl_1_0/: component.xml
ip_repo/my_host_iface_and_ctrl_1_0/hdl/: my_host_iface_and_ctrl.vhd  my_host_iface_and_ctrl_slave_lite_v1_0_S00_AXI.vhd
ip_repo/my_host_iface_and_ctrl_1_0/xgui/: my_host_iface_and_ctrl_v1_0.tcl
ip_repo/pim/: af_unit.vhd  af_unit_tb.vhd  af_units.vhd  all_af_fcns_rom.mem  component.xml  ew_mul_group.vhd  ew_mul_groups.vhd  fp32_to_bf16_units.vhd  mac_unit.vhd  mac_units.vhd  pim_banks.vhd  pim_top.vhd  pim_top_tb.vhd
ip_repo/pim/src/: af_unit.vhd  mac_unit_tb.vhd  pim_top_tb.vhd
nanogpt_model/: .gitignore  c_gen_weights.py  config.py  dataset.py  generate.py  generate_block0_example_trace.py  model.py  tokenizer.py  train.py  utils.py
nanogpt_model/c_gen/: gpt2_weights.h  gpt2_weights_small.h
scripts/: .gitignore  all_af_fcns_rom_gen.py  bf16_to_float.py  float_to_bf16.py  gemv_ewmul_bf16_tensor_to_c_u16.py
sw/: .gitignore
sw/_ide/: version.ini
sw/cent/: vitis-comp.json
sw/cent/psu_cortexr5_0/standalone_psu_cortexr5_0/bsp/libsrc/my_host_iface_and_ctrl/src/: CMakeLists.txt  MY_HOST_IFACE_AND_CTRLConfig.cmake  xmy_host_iface_and_ctrl_g.c
sw/cent_app/: CMakeLists.txt  vitis-sys.json
sw/cent_host/: vitis-comp.json
sw/cent_pnm/: vitis-comp.json
(+83 files in other folders)
